test/spec_vectors/table_get/fail/module_4.wat
(module (table $t 10 externref) (func $type-result-externref-vs-funcref (result funcref) (table.get $t (i32.const 1))))